--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,21 +7,21 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Clonar el repositorio
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4  # Actualizado a la última versión
 
       - name: Instalar Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4  # Última versión
         with:
           python-version: '3.x'
 
       - name: Instalar dependencias
-        run: pip install -r requirements.txt  # Instala todas las dependencias
+        run: pip install -r requirements.txt  # Asegúrate de tener el archivo requirements.txt
 
       - name: Crear el ejecutable
         run: pyinstaller --onefile main.py
 
       - name: Subir el ejecutable
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4  # Última versión
         with:
           name: executable
           path: dist/main.exe
