--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,32 @@
-selenium>=4.0.0
-webdriver-manager>=4.0.0
-requests>=2.28.0
-urllib3>=1.26.0
-pandas>=2.1.0
-pyinstaller>=6.10.0
+attrs==25.3.0
+certifi==2025.1.31
+contourpy==1.3.1
+cycler==0.12.1
+exceptiongroup==1.2.2
+fonttools==4.56.0
+h11==0.14.0
+idna==3.10
+kiwisolver==1.4.8
+matplotlib==3.10.1
+numpy==2.2.3
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+pyparsing==3.2.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+seaborn==0.13.2
+selenium==4.29.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+websocket-client==1.8.0
+wsproto==1.2.0
+
