--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pillow==11.1.0
 pyparsing==3.2.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+pyinstaller>=6.10.0
 pytz==2025.1
 seaborn==0.13.2
 selenium==4.29.0
